# carrerOs

./: .env.example  .gitignore  DEVELOPMENT.md  PRODUCT_BLUEPRINT.md  README.md  config.py  database.py  llm_service.py  main.py  models.py  pyproject.toml  schemas.py  test_capabilities.py  test_llm_config.py
frontend/: api.js  app.js  capability-rules.js  index.html  styles.css
frontend/data/: ai-brief-history.json  ai-brief.json
routes/: agent.py  auth.py  capabilities.py
scripts/: fetch_ai_brief.py
