[project]
name = "job-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "passlib[bcrypt]>=1.7.0",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]
